--- a/.prettierignore
+++ b/.prettierignore
@@ -16,3 +16,5 @@ force-app/main/default/staticresources/*
 
 # Exclude project config (edited by CI workflow)
 sfdx-project.json
+/node_modules
+./dist
